<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_home_title" />

        <!-- Section COLLECTION -->
        <item
            android:id="@+id/nav_products"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/menu_products_title" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_locations_title" />

        <!-- Section CUISINE -->
        <item
            android:id="@+id/nav_all_ingredients"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="Tous les Ingrédients" />
        <item
            android:id="@+id/nav_ingredients_locations"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="Emplacements Cuisine" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_recipes_title" />

        <item
            android:id="@+id/nav_recent_finds"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/recent_finds_label" />
        <item
            android:id="@+id/nav_recent_organizations"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/recent_organizations_label" />
        <item
            android:id="@+id/nav_searches"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_searches_title" />

        <item
            android:id="@+id/nav_import"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_import_title" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_backup_title" />
        <item
            android:id="@+id/nav_signatures"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/rapport_signatures" />
    </group>
</menu>
