<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:text="@string/save_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSave"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/item_image_preview_description"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_picture_button" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/item_title_hint"
                android:inputType="textCapWords" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_possessed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_possessed_switch" />

            <EditText
                android:id="@+id/etUniverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_universe_hint"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etImageUri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:visibility="gone"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etEditeur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_editor_hint"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etAnnee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_year_hint"
                android:inputType="number"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etMois"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_month_hint"
                android:inputType="number"
                tools:ignore="Autofill" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/super_category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/actv_super_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_super_category_hint"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/actv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_category_hint"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/etMateriau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_material_hint"
                android:inputType="textCapSentences"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etTirage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_run_hint"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etDimensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_dimensions_hint"
                android:inputType="text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etPrixAchat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_purchase_price_hint"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etValeurEstimee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_estimated_value_hint"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etLieuAchat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_purchase_location_hint"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_notes_hint"
                android:inputType="textMultiLine|textCapSentences"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etLocalisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_location_hint"
                android:inputType="textCapWords"
                tools:ignore="Autofill" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>